--- a/index.html
+++ b/index.html
@@ -866,6 +866,22 @@ body{
     font-size:11px;
   }
 }
+.btn-danger{
+  background: #fee2e2;           /* light red bg */
+  color: #b91c1c;                /* dark red text */
+  border: 1px solid #fca5a5;
+  font-weight: 600;
+}
+
+.btn-danger:hover{
+  background: #ef4444;           /* solid red on hover */
+  color: #fff;
+  border-color: #ef4444;
+}
+
+.btn-danger:active{
+  transform: scale(0.97);
+}
 
 
 </style>
@@ -1905,11 +1921,12 @@ async function showMyOrdersList(){
 
     ${
       canCancel
-        ? `<button class="btn"
-             style="margin-top:8px;background:#eee;color:#111"
-             onclick="cancelOrderFromSite('${o.order_id}')">
-             Cancel Order
-           </button>`
+        ? `<button class="btn btn-danger"
+  style="margin-top:8px"
+  onclick="cancelOrderFromSite('${o.order_id}')">
+  Cancel Order
+</button>
+
         : ''
     }
   </div>
