--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ body{
   <div class="container" id="home" style="margin-top:18px">
     <div class="slider" id="slider">
       <img src="thekua1.jpg" class="active" alt="Premium Thekua">
-      <img src="thekua2.jpg" alt="Ghee Special Thekua">
+      <img src="thekua2.jpg" alt="Suji Special Thekua">
       <img src="thekua3.jpg" alt="Jaggery Thekua">
       <img src="Slider1.jpg" alt="Thekua - Traditional Snack">
       <img src="Slider2.jpg" alt="Vaishnav Store Products">
