--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@ const products = [
     ]
   },
   {
-    id:2,name:"Ghee Special Thekua",img:"thekua2.jpg",
+    id:2,name:"Suji Special Thekua",img:"thekua2.jpg",
     variants: [
        { key: '250g', label: '250 g', actual:499, offer:299 },
       { key: '500g', label: '500 g', actual:799, offer:599 },
