--- a/index.html
+++ b/index.html
@@ -2079,8 +2079,8 @@ const canCancel =
 
 
   
-function renderOrdersPage(){
-  showMyOrdersList();
+async function renderOrdersPage(){
+  await showMyOrdersList();
 }
 
 
